# logfile-mcp-server

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  history.txt  pyproject.toml  run_playwright_e2e.sh
app/: __init__.py  config.py  main.py
app/database/: __init__.py  base.py  connection.py  models.py  nexus_database.py  nginx_database.py  operations.py
app/file_discovery/: __init__.py  discovery.py
app/mcp/: __init__.py  schemas.py  server.py  tools.py
app/processing/: __init__.py  orchestrator.py
app/processors/: __init__.py  base.py  nexus_processor.py  nginx_processor.py
app/static/: .gitkeep  script.js  style.css
app/utils/: __init__.py  logger.py
app/web/: __init__.py  routes.py
app/web/templates/: .gitkeep  index.html
docs/: ADDING_NEW_LOG_FORMATS.md  README.md  SPEC.md
docs/adr/: ADR_20250728_01_general.md  ADR_20250728_02_adopt_uv.md  ADR_20250728_03_chunk_size_lines.md  ADR_20250728_04_architectural_pattern_consistency.md  ADR_20250731_05_test_database_consolidation.md  ADR_20250731_06_mcp_server_integration.md  ADR_20250802_08_systematic_test_coverage_assessment.md  README.md
docs/best-practices/: LOGGING.md  PYTHON.md  README.md  SECURITY.md  TESTING.md
scripts/: README.md  create_demo_db.py  start_web.py
tests/: __init__.py  conftest.py  test_settings_helper.py
tests/e2e/: test_mcp_e2e.py
tests/fixtures/: .gitkeep  __init__.py  test_database.py
tests/integration/: .gitkeep  __init__.py  test_cli_to_processor_integration.py  test_mcp_integration.py  test_web_interface_integration.py
tests/playwright/: .gitkeep  conftest.py  test_web_interface.py
tests/unit/: __init__.py  test_base_processor.py  test_config.py  test_database.py  test_database_connection.py  test_database_operations.py  test_file_discovery.py  test_file_discovery_advanced.py  test_logger.py  test_main_cli.py  test_mcp_server.py  test_mcp_server_advanced.py  test_mcp_tools.py  test_nexus_database.py  test_nexus_processor.py  test_nginx_database.py  test_nginx_processor.py  test_orchestrator.py  test_processors_advanced.py
